--- a/chart/templates/deployment.yaml
+++ b/chart/templates/deployment.yaml
@@ -81,10 +81,12 @@ spec:
         ports:
         - containerPort: 80
           protocol: TCP
-{{- if (and .Values.hostPort (gt (int .Values.hostPort) 0)) }}
-        - containerPort: 444
-          hostPort: {{ int .Values.hostPort }}
+        - containerPort: 443
           protocol: TCP
+        - containerPort: 444
+          protocol: TCP
+{{- if (and .Values.hostPort (gt (int .Values.hostPort) 0)) }}
+          hostPort: {{ int .Values.hostPort }}
 {{- end}}
         - containerPort: 6666
           protocol: TCP
