customize for testing

--- a/chart/values.yaml
+++ b/chart/values.yaml
@@ -127,7 +127,7 @@ noProxy: 127.0.0.0/8,10.0.0.0/8,172.16.0.0/12,192.168.0.0/16,.svc,.cluster.local
 image:
   # Optional: Image-specific registry override
   # registry: ""
-  repository: rancher/rancher
+  repository: jq20/rancher
   # Defaults to .Chart.appVersion
   # rancher/rancher image tag. https://hub.docker.com/r/rancher/rancher/tags/
   tag: ""
@@ -196,8 +196,8 @@ postDelete:
   image:
     # Optional: Image-specific registry override
     # registry: ""
-    repository: %POST_DELETE_IMAGE_NAME%
-    tag: %POST_DELETE_IMAGE_TAG%
+    repository: rancher/shell
+    tag: v0.6.1-rc.1
     # Optional: Image-specific pullPolicy Override
     # options: Always, Never, IfNotPresent
     # pullPolicy: "Always"
@@ -214,8 +214,8 @@ preUpgrade:
   image:
     # Optional: Image-specific registry override
     # registry: ""
-    repository: %PRE_UPGRADE_IMAGE_NAME%
-    tag: %PRE_UPGRADE_IMAGE_TAG%
+    repository: rancher/shell
+    tag: v0.6.1-rc.1
     # Optional: Image-specific pull policy override
     # pullPolicy: "Always"
 
