--- a/pkg/controllers/capr/dynamicschema/sample/rke-machine.cattle.io_samples.yaml
+++ b/pkg/controllers/capr/dynamicschema/sample/rke-machine.cattle.io_samples.yaml
@@ -174,6 +174,18 @@ spec:
                 description: FailureReason indicates whether the provisioning job
                   failed on creation or on removal of the machine.
                 type: string
+              initialization:
+                description: |-
+                  Initialization provides observations of the RKEMachine initialization process.
+                  NOTE: Fields in this struct are part of the Cluster API contract and are used to orchestrate initial Machine provisioning.
+                minProperties: 1
+                properties:
+                  provisioned:
+                    description: |-
+                      Provisioned is true when the infrastructure provider reports that the Machine's infrastructure is fully provisioned.
+                      NOTE: this field is part of the Cluster API contract, and it is used to orchestrate initial Machine provisioning.
+                    type: boolean
+                type: object
               jobName:
                 description: JobName is the name of the provisioning job of the machine.
                 type: string
